# WorldMM

./: pyproject.toml
script/: 4_eval.sh
src/worldmm/memory/episodic/: memory.py
src/worldmm/memory/semantic/: memory.py
